feat: added some apis
